# hrm

./: .gitignore  LICENSE  Makefile  README.md  hrm.py  hrm.sty  hrm_tests.py  mksolutions.py  pyproject.toml  setup.py
hrm/: __init__.py  __main__.py  exam.py  hrmx.c  hrmx.pyx  ops.py  parse.py  solutions.json  tikz.py  tui.py  words.py  xui.py
test/: level-14.hrm  level-19.hrm  level-7.hrm  level-9.hrm
