[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hrm-interpreter"
version = "1.4.2"
authors = [
  { name = "Franck Pommereau", email = "franck.pommereau@univ-evry.fr" },
]
description = "Minimalist Human Resource Machine interpreter"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Interpreters",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent"
]
dependencies = [
    "rich[all]",
    "typer[all]",
]

[project.urls]
"Homepage" = "https://github.com/fpom/hrm"
"Bug Tracker" = "https://github.com/fpom/hrm/issues"

[project.scripts]
hrmi = "hrm.__main__:app"

[tool.hatch.build.targets.wheel]
only-include = ["hrm", "scripts"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"scripts" = "hrm/*.json"
