[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "hrm-interpreter"
version = "1.5"
authors = [
  { name = "Franck Pommereau", email = "franck.pommereau@univ-evry.fr" },
]
description = "Minimalist Human Resource Machine interpreter"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Interpreters",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Operating System :: OS Independent"
]
dependencies = [
    "rich",
    "typer[all]",
]

[project.urls]
Homepage = "https://github.com/fpom/hrm"
"Bug Tracker" = "https://github.com/fpom/hrm/issues"

[project.scripts]
hrmi = "hrm.__main__:app"
